trunk/tests/jastadd/negative/type_errors/L3/3_ConstDecl3.ob
MODULE TestModule;
	PROCEDURE f(a : INTEGER);
		CONST C = 2 * (a + 3);
	END f;
END TestModule.
